# eliduprees-3d-designs

./: .gitignore  3d_printer_feet.py  Cargo.toml  README.md  adapt_anything.py  air_adapters.py  air_adapters_pyocct.py  air_purifier.py  air_purifier_switchbox_frame.py  bearings.py  blinds.py  blowers.py  blue_light_hat.py  build_scad.py  camera_bracket.py  cardboard_corner_protector.py  ceiling_hooks.py  cloth_mask_restrainer.py  code_generation.py  corrugation_experiments.py  cup_holders.py  depthmap.py  drawer_slides.py  drill_attachments.py  dust_collectors.py  edge_joiners.py  emg_mouse_clasps.py  emg_mouse_enclosure.py  experiments.py  extrusion_quick_release.py  face_depthmap_loader.py  face_depthmap_singlewall_gcode.py  faces.py  freecad_autorun.py  freecad_experiments.py  freecad_utils.py  full_face_mask.py  full_face_mask_notes.txt  full_face_mask_pyocct.py  gauntlet.py  (+55 more)
data_model/: serialization.py  serialization_tests.py  sqlite_store.py  storage_api.py
eliduprees_3d_designs_lib/: Cargo.toml
eliduprees_3d_designs_storage_api/: Cargo.toml
full_face_mask_definitions/: chin_cloth.py  constants.py  headband.py  headband_geometry.py  headband_shape.py  intake.py  shield.py  shield_geometry.py  shield_shape.py  top_cloth.py  utils.py
full_face_mask_pyocct/: assembly.py  flat_pieces.py  frame.py  intake.py  setup.py
full_face_mask_pyocct_old/: assembly.py  frame.py  setup.py
gcode_stuff/: gcode_direct_test.py  (+3 more)
stl_to_depthmap/: Cargo.toml
stl_to_depthmap/src/: main.rs
truck_experiments/: Cargo.toml
truck_experiments/src/: app.rs  main.rs
(+14 files in other folders)
